--- a/consumer/consumer.yaml
+++ b/consumer/consumer.yaml
@@ -1,14 +1,3 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: consumer
-spec:
-  ports:
-  - port: 8080
-  type: ClusterIP
-  selector:
-    app: consumer
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -24,13 +13,19 @@ spec:
     spec:
       containers:
       - name: consumer
-        image: bullmq-consumer
-        ports:
-        - containerPort: 8080
+        image: gcr.io/jkwng-images/keda-bullmq-consumer:latest
+        imagePullPolicy: Always
         env:
         - name: REDIS_QUEUE_HOST
-          value: REDIS_IP
+          value: 10.28.0.3
         - name: REDIS_QUEUE_PORT
           value: "6379"
         - name: PORT
           value: "8080"
+        resources:
+          requests:
+            cpu: "1"
+            memory: "2Gi"
+          limits:
+            cpu: "1"
+            memory: "2Gi"
