--- a/consumer/redis-hpa.yaml
+++ b/consumer/redis-hpa.yaml
@@ -2,21 +2,22 @@ apiVersion: keda.sh/v1alpha1
 kind: ScaledObject
 metadata:
   name: redis-scaledobject
-  namespace: default
+  namespace: consumer
   labels:
     deploymentName: consumer
 spec:
-  maxReplicaCount: 4
-  pollingInterval: 1  # Optional. Default: 30 seconds
+  minReplicaCount: 1
+  maxReplicaCount: 10
+  pollingInterval: 10  # Optional. Default: 30 seconds
   cooldownPeriod:  2 # Optional. Default: 300 seconds
   scaleTargetRef:
     name: consumer
   triggers:
     - type: redis
       metadata:
-        address: REDIS_IP:6379
-        listName: "bull:dataSchedule:wait" # "bull:dataSchedule:delayed"
-        listLength: "1"
+        address: 10.28.0.3:6379
+        listName: "{dataSchedule}:dataSchedule:wait"
+        listLength: "1" # 1 outstanding job -> 1 pod, until max replica
       # authenticationRef:
       #   name: keda-trigger-auth-redis-secret
 ---
