--- a/provider/package.json
+++ b/provider/package.json
@@ -10,6 +10,8 @@
     "dependencies": {
         "bullmq": "^4.8.0",
         "dotenv": "^16.3.1",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "ioredis": "^5.4.1",
+        "winston": "^3.13.0"
     }
 }
